<resources>
    <string name="app_name">Birthday Blessings</string>
    <string name="quote1">\“I\'m so grateful you came into the world because you make my world better every day\"</string>
    <string name="quote2">\"Count your life by smiles, not tears. Count your age by friends, not years\"</string>
    <string name="quote3">\"May the joy that you have spread in the past come back to you on this day. Wishing you a very happy birthday!\"</string>
    <string name="quote4">\"Happy birthday! I hope all your birthday wishes and dreams come true.\"</string>
    <string name="quote5">\"Happy birthday to someone who is smart, gorgeous, funny and reminds me a lot of myself… from one fabulous chick to another!\"</string>
    <string name="quote6">\"Just wanted to be the first one to wish you happy birthday so I can feel superior to your other well-wishers. So, happy birthday!\"</string>
    <string name="quote7">\"Hope your special day brings you all that your heart desires!\"</string>
    <string name="quote8">\"Wishing you a beautiful day with good health and happiness forever. Happy birthday!\"</string>
    <string name="quote9">\"A friend like you is more priceless than the most beautiful diamond.Happy birthday!\"</string>
    <string name="quote10">\"On this wonderful day, I wish you the best that life has to offer! Happy birthday!\"</string>
</resources>