<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:src="@drawable/birthday"
        android:scaleType="centerCrop"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginLeft="7dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/quote1"
        android:textColor="#FFFFFF"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#B10606"
        android:layout_marginTop="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginLeft="9dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/quote2"
        android:textColor="#FFFFFF"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#CB673AB7"
        android:layout_marginTop="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginLeft="9dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:text="@string/quote3"
        android:textColor="#FFFFFF"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#8BC34A"
        android:layout_marginTop="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginLeft="9dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/quote4"
        android:textColor="#FFFFFF"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#03A9F4"
        android:layout_marginTop="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginLeft="9dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:text="@string/quote5"
        android:textColor="#FFFFFF"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#FF9800"
        android:layout_marginTop="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginLeft="9dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:text="@string/quote6"
        android:textColor="#FFFFFF"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#4CAF50"
        android:layout_marginTop="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginLeft="9dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/quote7"
        android:textColor="#FFFFFF"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#AC5337"
        android:layout_marginTop="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginLeft="9dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/quote8"
        android:textColor="#FFFFFF"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#DC4545"
        android:layout_marginTop="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginLeft="9dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/quote9"
        android:textColor="#FFFFFF"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#CCAA14"
        android:layout_marginTop="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginLeft="9dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/quote10"
        android:textColor="#FFFFFF"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:textStyle="italic"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="#2F4F4F"
        android:layout_marginTop="7dp"
        android:layout_marginRight="9dp"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="9dp"/>

</LinearLayout>
</ScrollView>